Update N-Gram Language Models.ipynb

--- a/N-Gram Language Models/N-Gram Language Models.ipynb
+++ b/N-Gram Language Models/N-Gram Language Models.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "## Overview\n",
     "\n",
-    "Develop two N-gram language models, a unigram and a fivegram, to predict missing words in a text. The sample text utilized to train and evaluate these models is the work of William Shakespeare.\n",
+    "Developed two N-gram language models, a bigram and a fivegram, to predict missing words in a text. The sample text utilized to train and evaluate these models is the work of William Shakespeare.\n",
     "\n",
     "**Tasks:**\n",
     "1. Data Preparation\n",
