Update 3D Sinusoidal Data using Artificial Neural Networks.ipynb

--- a/3D Sinusoidal Data Using Artificial Neural Networks/3D Sinusoidal Data using Artificial Neural Networks.ipynb
+++ b/3D Sinusoidal Data Using Artificial Neural Networks/3D Sinusoidal Data using Artificial Neural Networks.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "### Overview\n",
     "\n",
-    "Utilized artificial neural networks to solve regression issues by fitting a neural network to a noisy 3D sinusoidal data set using a Sequential model. The main techniques implemented are standardization, fitting a sequential model with Keras, and plotting points with their prediction curve.\n",
+    "Utilized artificial neural networks to solve regression issues by fitting a neural network to a noisy 3D sinusoidal data set using a Sequential model. Used matplotlib to display the data points and prediction curve.\n",
     "\n",
     "**Tasks:**\n",
     "1. Build Plot Functions\n",
